Cleanup code
Signed-off-by: doychin <doychin@dsoft-bg.com>